<resources>
    <string name="app_name">Earnie</string>
    <string name="facebook_app_id">1052375714883838</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="i_agree">I agree with %1$s</string>
    <string name="terms_of_service">terms of service</string>
    <string name="lorem_ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="go_back">Go back</string>
    <string name="title_activity_tutor">TutorialActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="forgot_passwrd">Forgot password</string>
    <string name="wallet">Wallet</string>
    <string name="earnies">earnies</string>
    <string name="cash_it">Cash it!</string>
    <string name="payment_methods">Payment methods</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about_earnie">About Earnie</string>
    <string name="ad_categories">Ad categories</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="ad_frequency">Ad frequency</string>
    <string name="normal">Normal</string>
    <string name="cannot_cash">You can only cash your earnies after setting up an account of yours we can transfer the money, and after you make at least U$ 50 or 5000 earnies</string>
    <string name="payment_method">Payment method</string>
    <string name="cash_your_earnies">Cash your earnies</string>
    <string name="confirm">Confirm</string>
    <string name="amount">Amount</string>
    <string name="cash_it_all">Cash it all</string>
    <string name="cancel">Cancel</string>
    <string name="hello_user">Hello, </string>
    <string name="sign">!</string>
    <string name="right_now_you_got">Right now you got</string>
    <string name="log_in_with_fb">Login with Facebook</string>
    <string name="log_out_btn">Log out</string>
    <string name="payment_list_chose">Choose below how do you want to cash your earnies</string>
    <string name="Enable_show_everywhere">Enable show everywhere</string>

    <!-- {bold}  \ new sentence   -->
    <string-array name="pager_items">
        <item>If you see{1 ad}you get paid{1 earnie}</item>
        <item>You get{5 earnies}if you watch a Full video</item>
        <item>You may{cash your earnies}every time you \n U$ 50.00 or more</item>
        <item>Get an Ad + Swipe or tap and it will leave your screen</item>
        <item>Tap and Hold it + to see more from this particular Ad</item>
    </string-array>
</resources>
