<layout xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout android:clickable="true"
        android:background="@color/colorPrimary"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chickinnick.earnie.enter.RegisterFragment">


        <ImageView
            android:scaleType="centerInside"
            android:layout_centerHorizontal="true"
            android:id="@+id/logo"
            android:src="@drawable/logo"
            android:layout_width="@dimen/logo_side"
            android:layout_height="@dimen/logo_side" />


        <EditText
            android:layout_below="@+id/logo"
            android:hint="@string/first_name"
            android:background="@drawable/edit_text_background"
            android:id="@+id/first_name"
            style="@style/EditTextEnter" />

        <EditText
            android:hint="@string/last_name"
            style="@style/EditTextEnter"
            android:layout_below="@+id/first_name"
            android:background="@drawable/edit_text_background"
            android:id="@+id/last_name" />

        <EditText
            android:hint="@string/email"
            android:layout_below="@+id/last_name"
            android:background="@drawable/edit_text_background"
            android:id="@+id/email"
            style="@style/EditTextEnter" />

        <EditText
            android:hint="@string/password"
            style="@style/EditTextEnter"
            android:layout_below="@+id/email"
            android:background="@drawable/edit_text_background"
            android:id="@+id/password" />

        <LinearLayout
            android:padding="5dp"
            android:layout_margin="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/password"
            android:id="@+id/tick_layout_agree"
            android:orientation="horizontal"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content">


            <ToggleButton
                android:id="@+id/tick_terms"
                android:text=""
                android:textOff=""
                android:textOn=""
                android:background="@drawable/tick_background"
                android:layout_width="@dimen/tick_side"
                android:layout_height="@dimen/tick_side" />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:id="@+id/text_agree"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Button
            android:id="@+id/sign_up"
            android:background="@drawable/btn_background_selector_sign"
            android:layout_below="@+id/tick_layout_agree"
            android:text="@string/sign_up"
            style="@style/ButtonEnter" />


        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/or_tv"
            android:layout_below="@+id/sign_up"
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:padding="6dp"
            android:textSize="@dimen/text_size"
            android:layout_margin="2dp"
        android:layout_height="wrap_content" />


    </RelativeLayout>
</layout>