<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/main_activity_background"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context="com.chickinnick.earnie.home.CashFragment">

        <android.support.v7.widget.AppCompatTextView
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:id="@+id/cash_tv"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/text_default_dark"
            android:textSize="@dimen/text_size"
            android:text="@string/cash_your_earnies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginBottom="@dimen/divider_margin"
            android:layout_marginTop="@dimen/divider_margin"
            android:background="@color/grey_middle"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/amount_value_et"
            android:background="@drawable/edit_text_background"
            android:layout_gravity="center_horizontal"
            style="@style/EditTextEnter"
            android:hint="@string/amount"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_text_background"
            android:layout_gravity="center_horizontal"
            style="@style/EditTextEnter"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/cash_all_tv"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:textColor="@color/text_default_dark"
                android:textSize="@dimen/text_size"
                android:text="@string/cash_it_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <android.support.v7.widget.AppCompatButton

            android:layout_margin="@dimen/divider_margin"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@drawable/btn_accent_bg_selector"
            android:text="@string/confirm"
            android:textSize="@dimen/text_size"
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatButton
            android:layout_margin="2dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/text_default_dark"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textSize="@dimen/text_size"
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>
