<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="com.chickinnick.earnie.enter.TermsFragment">

        <ImageView
            android:scaleType="centerInside"
            android:layout_centerHorizontal="true"
            android:id="@+id/logo"
            android:src="@drawable/logo"
            android:layout_width="@dimen/logo_side"
            android:layout_height="@dimen/logo_side" />

        <TextView
            android:layout_below="@+id/logo"
            android:id="@+id/terms_title"
            android:layout_centerHorizontal="true"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:text="@string/terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_below="@+id/terms_title"
            android:id="@+id/scroll_text"
            android:textColor="@color/white"
            android:padding="6dp"
            android:layout_margin="2dp"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/terms_scroll_h">

            <TextView
                android:id="@+id/terms_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_big"
                android:text="@string/lorem_ipsum_dolor"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </ScrollView>

        <Button
            android:onClick="onBack"
            android:id="@+id/back_btn"
            android:background="@drawable/btn_background_selector_sign"
            android:layout_below="@+id/scroll_text"
            android:text="@string/go_back"
            style="@style/ButtonEnter" />
    </RelativeLayout>
</layout>