<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="user"
            type="com.chickinnick.earnie.model.User" />
    </data>


    <RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        tools:context=".home.WalletActivity">

        <android.support.v7.widget.Toolbar
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">


            <android.support.v7.widget.AppCompatTextView
                android:textSize="@dimen/text_size"
                android:textColor="@color/toolbar_title_blue"
                android:maxLines="1"
                android:id="@+id/title"
                android:text="@string/wallet"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/drawer_btn"
                android:layout_gravity="end"
                android:background="@drawable/ic_menu_drawer"
                android:layout_height="wrap_content"
                android:layout_width="40dp"
                android:padding="2dp"
                android:width="25dp" />
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:background="@drawable/main_activity_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/toolbar">


            <android.support.v7.widget.AppCompatTextView
                android:textSize="@dimen/text_size"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/you_got_tv"
                android:id="@+id/user_message"
                android:text="@{@string/hello_user + user.name + @string/sign}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatTextView
                android:textSize="@dimen/text_size"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/earnies_value"
                android:id="@+id/you_got_tv"
                android:text="@string/right_now_you_got"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

                <TextView
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:text="2"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/digit_size"
                    android:id="@+id/earnies_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@color/yellow"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/earnies_value"
                    android:text="@string/earnies"
                    android:textSize="@dimen/earnies"
                    android:id="@+id/earnies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



            <android.support.v7.widget.AppCompatButton
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:text="@string/cash_it"
                android:layout_below="@+id/earnies"
                android:id="@+id/cash_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>


    </RelativeLayout>
</layout>
